# coinbase-exchange

./: .gitignore  coinbase-exchange.cabal  default.nix  shell.nix
sbox/: Main.hs
src/Coinbase/: Exchange.hs
src/Coinbase/Exchange/: Internal.hs  MarketData.hs  Private.hs  Rest.hs  Socket.hs  Types.hs
src/Coinbase/Exchange/Types/: Core.hs  MarketData.hs  Private.hs
test/: Main.hs
test/Coinbase/Exchange/MarketData/: Test.hs
test/Coinbase/Exchange/Private/: Test.hs
test/Coinbase/Exchange/Socket/: Test.hs
