name:                coinbase-exchange
version:             0.4.0.0
synopsis:            Connector library for the coinbase exchange.
description:         Access library for the coinbase exchange. Allows the use
                     of both the public market data API as well as the private
                     account data API. Additionally provides types to connect
                     to the streaming API via a websocket.
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.20

Flag library-only
  Description: Build for emacs compilation
  Default:     False

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Coinbase.Exchange
                      , Coinbase.Exchange.Types.Socket
                      , Coinbase.Exchange.Socket

    other-modules:      Coinbase.Exchange.Rest
                      , Coinbase.Exchange.Internal
                      , Coinbase.Exchange.MarketData
                      , Coinbase.Exchange.Private
                      , Coinbase.Exchange.Types
                      , Coinbase.Exchange.Types.Core
                      , Coinbase.Exchange.Types.MarketData
                      , Coinbase.Exchange.Types.Private

    build-depends:      base    >= 4 && < 5
                      , aeson
                      , aeson-casing
                      , attoparsec
                      , base64-bytestring
                      , byteable
                      , bytestring
                      , containers
                      , cryptohash
                      , deepseq
                      , exceptions
                      , hashable
                      , http-client
                      , http-client-tls
                      , http-types
                      , network
                      , scientific
                      , text
                      , time
                      , transformers
                      , uuid
                      , unordered-containers
                      , vector
                      , websockets
                      , wuss

                      , old-locale

executable sandbox
    if flag( library-only )
      Buildable: False
    main-is:            Main.hs
    hs-source-dirs:     sbox
    default-language:   Haskell2010

    build-depends:      base    >= 4 && < 5

                    ,   uuid
                    ,   text
                    ,   aeson
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   http-client
                    ,   http-client-tls
                    ,   websockets
                    ,   transformers
                    ,   network
                    ,   wuss
                    ,   scientific
                    ,   unordered-containers

                    ,   coinbase-exchange

test-suite test-coinbase
    if flag( library-only )
      Buildable: False
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    ghc-options:        -threaded
    default-language:   Haskell2010

    other-modules:      Coinbase.Exchange.MarketData.Test
                        Coinbase.Exchange.Private.Test
                        Coinbase.Exchange.Socket.Test

    build-depends:      base    >= 4 && < 5
                      , aeson
                      , async
                      , bytestring
                      , coinbase-exchange
                      , http-client
                      , http-client-tls
                      , old-locale
                      , random
                      , scientific
                      , time
                      , transformers
                      , unordered-containers
                      , uuid
                      , websockets

                      , tasty
                      , tasty-th
                      , tasty-quickcheck
                      , tasty-hunit
